versioned_docs/version-6.0.0/api/1_wrapper/setstoredprofileid.md
# SetStoredProfileId

Sets the stored profile ID

## Method Parameters
Parameter | Description
--------- | -----------
profileId | The profile ID to set

## Usage

```mdx-code-block
<BrowserWindow>
<Tabs>
<TabItem value="csharp" label="C#">
```

```csharp
<%= data.branding.codePrefix %>.SetStoredProfileId("1234-1234-1234-1234");
```

```mdx-code-block
</TabItem>
<TabItem value="cpp" label="C++">
```

```cpp
<%= data.branding.codePrefix %>->setStoredProfileId("1234-1234-1234-1234");
```

```mdx-code-block
</TabItem>
<TabItem value="objectivec" label="Obj-C">
```

```objectivec
<%= data.branding.codePrefix %>.storedProfileId = @"1234-1234-1234-1234";
```

```mdx-code-block
</TabItem>
<TabItem value="java" label="Java">
```

```java
<%= data.branding.codePrefix %>.setStoredProfileId("1234-1234-1234-1234");
```

```mdx-code-block
</TabItem>
<TabItem value="js" label="JavaScript">
```

```javascript
<%= data.branding.codePrefix %>.setStoredProfileId("1234-1234-1234-1234");
```

```mdx-code-block
</TabItem>
<TabItem value="dart" label="Dart">
```

```dart
<%= data.branding.codePrefix %>.setStoredProfileId("1234-1234-1234-1234");
```

```mdx-code-block
</TabItem>
<TabItem value="roblox" label="Roblox">
```

```lua
<%= data.branding.codePrefix %>:setStoredProfileId("1234-1234-1234-1234")
```

```mdx-code-block
</TabItem>
<TabItem value="gdscript" label="GDScript">
```

```gdscript
var result = await <%= data.branding.codePrefix %>.set_stored_profile_id("1234-1234-1234-1234")

if result.status == 200:
	print("Success")
else:
	print("Failed: %s" % result.status_message)
```

```mdx-code-block
</TabItem>
<TabItem value="cfs" label="Cloud Code">
```

```cfscript
// N/A
```

```mdx-code-block
</TabItem>
<TabItem value="r" label="Raw">
```

```r
// N/A
```

```mdx-code-block
</TabItem>
</Tabs>
</BrowserWindow>
```

<details>
<summary>JSON Response</summary>

```json
<%= data.branding.codePrefix %>.setStoredProfileId("1234-1234-1234-1234");
```
</details>

